# labs-vulnerable-app

./: .gitignore  README.md  bake.hcl  compose.yaml  test-kc-token.py
.github/: dependabot.yaml
.github/workflows/: build.yaml
API/: .dockerignore  Dockerfile  pyproject.toml
API/app/: __init__.py  config.py  models.py
API/app/routes/: blog.py
API/app/utils/: db.py  keycloak.py
API/tests/: blog.py
db/: Dockerfile  init.sql
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx  index.js
frontend/src/components/: BlogDetail.jsx  BlogList.jsx  BlogModal.jsx  LoginButton.jsx  Navbar.jsx  ProfileButton.jsx  RegisterButton.jsx
frontend/src/pages/: Blog.jsx  Home.jsx  Login.jsx
frontend/src/services/: api.js  auth.js
idp/: Dockerfile  healthcheck.sh  realm.json
